// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matchDomain match path on domain as namespace 1`] = `
Object {
  "moduleId": "bond",
  "schemaId": "bond",
}
`;

exports[`matchDomain match path on domain as namespace 2`] = `
Object {
  "moduleId": "bond",
  "schemaId": "bond",
}
`;

exports[`matchDomain match path on domain, reg 1`] = `
Object {
  "moduleId": "foo",
  "schemaId": "foo",
}
`;

exports[`matchPath match path on domain as namespace 1`] = `
Object {
  "namespace": true,
  "notePath": "bond",
  "schema": Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "data": Object {
      "namespace": true,
    },
    "desc": "",
    "fname": "bond",
    "id": "bond",
    "links": Array [],
    "parent": "root",
    "title": "bond",
    "type": "schema",
    "updated": "1",
  },
  "schemaModule": Object {
    "fname": "bond",
    "imports": Array [],
    "root": Object {
      "body": "",
      "children": Array [],
      "created": "1",
      "data": Object {
        "namespace": true,
      },
      "desc": "",
      "fname": "bond",
      "id": "bond",
      "links": Array [],
      "parent": "root",
      "title": "bond",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "bond": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "data": Object {
          "namespace": true,
        },
        "desc": "",
        "fname": "bond",
        "id": "bond",
        "links": Array [],
        "parent": "root",
        "title": "bond",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
}
`;

exports[`matchPath match path on domain as namespace, child 1`] = `
Object {
  "namespace": false,
  "notePath": "bond.foo",
  "schema": Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "data": Object {
      "namespace": true,
    },
    "desc": "",
    "fname": "bond",
    "id": "bond",
    "links": Array [],
    "parent": "root",
    "title": "bond",
    "type": "schema",
    "updated": "1",
  },
  "schemaModule": Object {
    "fname": "bond",
    "imports": Array [],
    "root": Object {
      "body": "",
      "children": Array [],
      "created": "1",
      "data": Object {
        "namespace": true,
      },
      "desc": "",
      "fname": "bond",
      "id": "bond",
      "links": Array [],
      "parent": "root",
      "title": "bond",
      "type": "schema",
      "updated": "1",
    },
    "schemas": Object {
      "bond": Object {
        "body": "",
        "children": Array [],
        "created": "1",
        "data": Object {
          "namespace": true,
        },
        "desc": "",
        "fname": "bond",
        "id": "bond",
        "links": Array [],
        "parent": "root",
        "title": "bond",
        "type": "schema",
        "updated": "1",
      },
    },
    "version": 1,
  },
}
`;

exports[`note serialize basic 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

"
`;

exports[`note serialize with children 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

"
`;

exports[`note serialize with custom 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
bond: 42
---

"
`;

exports[`note serialize with hierarchy 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
parent: root
children:
  - ch1
  - ch2
---

"
`;

exports[`note serialize with hierarchy and null parent 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
parent: null
children:
  - ch1
  - ch2
---

"
`;

exports[`note serialize with parent 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

"
`;
